@@ -5,7 +5,6 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.hibernate.ddl-auto = create-drop
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:mem:testdb
-aero_minova_database_url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
